config ModelMapper and refactor converter class