@@ -7,6 +7,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class DeckConverter {
@@ -16,25 +17,21 @@ public class DeckConverter {
 
     public List<DeckDTO> convertEntityToDto(List<Deck> decks) {
         return decks.stream()
-                .map(deck -> convertEntityToDto(deck))
-                .toList();
+                .map(this::convertEntityToDto)
+                .collect(Collectors.toList());
     }
 
     public DeckDTO convertEntityToDto(Deck deck) {
-        if (deck == null) return null;
-        DeckDTO deckDTO = mapper.map(deck, DeckDTO.class);
-        return deckDTO;
+        return (deck == null) ? null : mapper.map(deck, DeckDTO.class);
     }
 
     public List<Deck> convertDtoToEntity(List<DeckDTO> deckDTOs) {
         return deckDTOs.stream()
-                .map(deck -> convertDtoToEntity(deck))
-                .toList();
+                .map(this::convertDtoToEntity)
+                .collect(Collectors.toList());
     }
 
     public Deck convertDtoToEntity(DeckDTO deckDTO) {
-        if (deckDTO == null) return null;
-        Deck deck = mapper.map(deckDTO, Deck.class);
-        return deck;
+        return (deckDTO == null) ? null : mapper.map(deckDTO, Deck.class);
     }
 }
